--- a/index.html
+++ b/index.html
@@ -493,23 +493,290 @@
                         </div>
 
                     </div>
-                    
+                    <!-- --------------------End Of Feeds---------------- -->
                     
                   </div>
                   <!-- ------------End Of Feeds------------ -->
             </div>
+            <!-- -------------End Of Middle----------------- -->
 
             <!-- ---------------Right------------------------ -->
             <div class="right">
+                <div class="messages">
+                    <div class="heading">
+                        <h4>Messages <i class="fa-solid fa-pen-to-square"></i></h4>
+                    </div>
+                    <!-- -----------Search Bar------------------ -->
+                     <div class="search-bar">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="search" placeholder="Search messages" id="message-search">
+                     </div>
+                     <!-- ------------------Messages Category---------------- -->
+                      <div class="category">
+                        <h6 class="active">Primary</h6>
+                        <h6>General</h6>
+                        <h6 class="message-requests">Requests(7)</h6>
+                      </div>
+                      <!-- -----------Message--------------------- -->
+                       <div class="message">
+                        <div class="profile-photo">
+                            <img src="./image/img1.jpg">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>EdemQuist</h5>
+                            <p class="text-blod">Just work up bruh</p>
+                        </div>
+                       </div>
+                       <div class="message">
+                        <div class="profile-photo">
+                            <img src="./image/img1.jpg">
+                        </div>
+                        <div class="message-body">
+                            <h5>EdemQuist</h5>
+                            <p class="text-bold">Just work up bruh</p>
+                        </div>
+                       </div>
+                       <div class="message">
+                        <div class="profile-photo">
+                            <img src="./image/img1.jpg">
+                        </div>
+                        <div class="message-body">
+                            <h5>EdemQuist</h5>
+                            <p class="text-bold">Just work up bruh</p>
+                        </div>
+                       </div>
+                       <div class="message">
+                        <div class="profile-photo">
+                            <img src="./image/img1.jpg">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>EdemQuist</h5>
+                            <p class="text-bold">Just work up bruh</p>
+                            <div class="active"></div>
+                        </div>
+                       </div>
+                       <div class="message">
+                        <div class="profile-photo">
+                            <img src="./image/img1.jpg">
+                        </div>
+                        <div class="message-body">
+                            <h5>EdemQuist</h5>
+                            <p class="text-bold">Just work up bruh</p>
+                            <div class="active"></div>
+                        </div>
+                       </div>
+                       <div class="message">
+                        <div class="profile-photo">
+                            <img src="./image/img1.jpg">
+                        </div>
+                        <div class="message-body">
+                            <h5>EdemQuist</h5>
+                            <p class="text-bold">Just work up bruh</p>
+                        </div>
+                       </div>
+                </div>
+                <!-- ----------------End of Message------------------- -->
+
+                <!-- -----------------Friend Request---------------------- -->
+                 <div class="friend-requests">
+                    <h4>Requests</h4>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./image/img2.jpg">
+                            </div>
+                            <div>
+                                <h5>Virat Kholi</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./image/img2.jpg">
+                            </div>
+                            <div>
+                                <h5>Virat Kholi</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./image/img2.jpg">
+                            </div>
+                            <div>
+                                <h5>Virat Kholi</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./image/img2.jpg">
+                            </div>
+                            <div>
+                                <h5>Virat Kholi</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./image/img2.jpg">
+                            </div>
+                            <div>
+                                <h5>Virat Kholi</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./image/img2.jpg">
+                            </div>
+                            <div>
+                                <h5>Virat Kholi</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                 </div>
             </div>
+            <!-- ---------------------End of Right---------------------- -->
         </div>
     </main>
+
+    <!-- ----------------------Theme Customization----------------------- -->
+     <div class="customize-theme">
+        <div class="card">
+            <h2>Customize your view</h2>
+            <p class="text-muted">Manage your font size, color, and background.</p>
+
+            <!-- -----------Font Size----------------- -->
+
+            <div class="font-size">
+                <h4>Font Size</h4>
+                <div>
+                    <h6>Aa</h6>
+                    <div class="choose-size">
+                        <span class="font-size-1"></span>
+                        <span class="font-size-2 active"></span>
+                        <span class="font-size-3"></span>
+                        <span class="font-size-4"></span>
+                        <span class="font-size-5"></span>
+                    </div>
+                    <h3>Aa</h3>
+                </div>
+            </div>
+
+            <!-- ------------Primary Colors--------------- -->
+
+            <div class="color">
+                <h4>Color</h4>
+                <div class="choose-color">
+                    <span class="color-1 active"></span>
+                    <span class="color-2"></span>
+                    <span class="color-3"></span>
+                    <span class="color-4"></span>
+                    <span class="color-5"></span>
+                </div>
+            </div>
+
+            <!--------------------------- Background Color------------------ -->
+
+            <div class="background">
+                <h4>Background</h4>
+                <div class="choose-bg">
+                    <div class="bg-1 active">
+                        <span></span>
+                        <h5 for="bg-1">Light</h5>
+                    </div>
+                    <div class="bg-2">
+                        <span></span>
+                        <h5 for="bg-1">Dim</h5>
+                    </div>
+                    <div class="bg-3">
+                        <span></span>
+                        <h5 for="bg-1">Lights Out</h5>
+                    </div>
+                </div>
+            </div>
+
+            <!-- --------------End of Theme Customization------------------------- -->
+
+
+        </div>
+     </div>
 
 
     <script src="app.js"></script>
 </body>
 </html> 
-
-
-
-<!-- 45.26 time -->
