--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         </div>
                         <!-- -------------End Notification Popup------------------- -->
                     </a>
-                    <a class="menu-item" id="messages-notifications">
+                    <a class="menu-item" id="messages-notification">
                         <span><i class="fa-solid fa-envelope"><small class="notification-count">6</small></i></span><h3>Messages</h3>
                     </a>
                     <a class="menu-item">
@@ -137,7 +137,7 @@
                     <a class="menu-item">
                         <span><i class="fa-solid fa-chart-line"></i></span><h3>Analytics</h3>
                     </a>
-                    <a class="menu-item">
+                    <a class="menu-item" id="theme">
                         <span><i class="fa-solid fa-palette"></i></span><h3>Theme</h3>
                     </a>
                     <a class="menu-item">
@@ -533,7 +533,7 @@
                             <img src="./image/img1.jpg">
                         </div>
                         <div class="message-body">
-                            <h5>EdemQuist</h5>
+                            <h5>virat</h5>
                             <p class="text-bold">Just work up bruh</p>
                         </div>
                        </div>
@@ -542,7 +542,7 @@
                             <img src="./image/img1.jpg">
                         </div>
                         <div class="message-body">
-                            <h5>EdemQuist</h5>
+                            <h5>dhoni</h5>
                             <p class="text-bold">Just work up bruh</p>
                         </div>
                        </div>
@@ -663,7 +663,7 @@
                             </button>
                             <button class="btn">
                                 Decline
-                            </button>
+                            </button> 
                         </div>
                     </div>
                     <div class="request">
@@ -723,12 +723,13 @@
             <!-- -----------Font Size----------------- -->
 
             <div class="font-size">
+
                 <h4>Font Size</h4>
-                <div>
+                <div> 
                     <h6>Aa</h6>
                     <div class="choose-size">
-                        <span class="font-size-1"></span>
-                        <span class="font-size-2 active"></span>
+                        <span class="font-size-1 active"></span>
+                        <span class="font-size-2"></span>
                         <span class="font-size-3"></span>
                         <span class="font-size-4"></span>
                         <span class="font-size-5"></span>
@@ -772,7 +773,6 @@
 
             <!-- --------------End of Theme Customization------------------------- -->
 
-
         </div>
      </div>
 
@@ -780,3 +780,7 @@
     <script src="app.js"></script>
 </body>
 </html> 
+
+
+
+<!-- 1:55:00 --> 
