--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
         <div class="container">
             <h2 class="log">
-                SelimApp
+                SelimInsta
             </h2>
             <div class="search-bar">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -58,70 +58,43 @@
                         <span><i class="fa-solid fa-compass"></i></span><h3>Explore</h3>
                     </a>
                     <a class="menu-item" id="notifications">
-                        <span><i class="fa-solid fa-bell"><small class="notification-count">9+</small></i></span><h3>Notifications</h3>
+                        <span><i class="fa-solid fa-bell"><small class="notification-count">4+</small></i></span><h3>Notifications</h3>
                         <!-- -------------Notification Popup------------------ -->
                         <div class="notifications-popup">
                             <div>
                                 <div class="profile-photo">
-                                    <img src="./image/img1.jpg">
+                                    <img src="./image/virat-dp.jpg">
                                 </div>
                                 <div class="notification-body">
-                                    <b>keke Benjamin</b> accepted your friend request
-                                    <small class="text-muted">2 Days AGO</small>
+                                    <b>Virat Kholi</b> accepted your friend request
+                                    <small class="text-muted">5 Hours AGO</small>
                                 </div>
                             </div>
                             <div>
                                 <div class="profile-photo">
-                                    <img src="./image/img1.jpg">
+                                    <img src="./image/messi-dp.jpg">
                                 </div>
                                 <div class="notification-body">
-                                    <b>keke Benjamin</b> accepted your friend request
-                                    <small class="text-muted">2 Days AGO</small>
+                                    <b>Messi</b> accepted your friend request
+                                    <small class="text-muted">12 Hours AGO</small>
                                 </div>
                             </div>
                             <div>
                                 <div class="profile-photo">
-                                    <img src="./image/img1.jpg">
+                                    <img src="./image/ind-logo.jpg">
                                 </div>
                                 <div class="notification-body">
-                                    <b>keke Benjamin</b> accepted your friend request
-                                    <small class="text-muted">2 Days AGO</small>
+                                    <b>BCCI</b> accepted your friend request
+                                    <small class="text-muted">1 Days AGO</small>
                                 </div>
                             </div>
                             <div>
                                 <div class="profile-photo">
-                                    <img src="./image/img1.jpg">
+                                    <img src="./image/ronaldo-dp.jpg">
                                 </div>
                                 <div class="notification-body">
-                                    <b>keke Benjamin</b> accepted your friend request
-                                    <small class="text-muted">2 Days AGO</small>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="profile-photo">
-                                    <img src="./image/img1.jpg">
-                                </div>
-                                <div class="notification-body">
-                                    <b>keke Benjamin</b> accepted your friend request
-                                    <small class="text-muted">2 Days AGO</small>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="profile-photo">
-                                    <img src="./image/img1.jpg">
-                                </div>
-                                <div class="notification-body">
-                                    <b>keke Benjamin</b> accepted your friend request
-                                    <small class="text-muted">2 Days AGO</small>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="profile-photo">
-                                    <img src="./image/img1.jpg">
-                                </div>
-                                <div class="notification-body">
-                                    <b>keke Benjamin</b> accepted your friend request
-                                    <small class="text-muted">2 Days AGO</small>
+                                    <b>Ronaldo</b> accepted your friend request
+                                    <small class="text-muted">3 Days AGO</small>
                                 </div>
                             </div>
                             
@@ -238,18 +211,18 @@
                         </div>
 
                         <div class="liked-by">
+                            <span><img src="./image/virat-dp.jpg"></span>
                             <span><img src="./image/csk-dp.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <p>Liked by <b>Virat Kholi</b> and <b>2,425 others</b></p>
+                            <span><img src="./image/profile-dp.jpg"></span>
+                            <p>Liked by <b>skselim</b> and <b>66,782 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Lana Rose</b> Lorem ispsum dolor sit quisquameius. <span class="harsh-tag">#ilfestyle</span></p>
+                            <p><b>skselim</b> &#10084;&#10084;&#10084; <span class="harsh-tag">#ilfestyle</span></p>
                         </div>
 
                         <div class="comments text-muted">
-                            View all 225 comments
+                            View all 154825 comments
                         </div>
 
                     </div>
@@ -286,18 +259,18 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,425 others</b></p>
+                            <span><img src="./image/virat-dp.jpg"></span>
+                            <span><img src="./image/csk-dp.jpg"></span>
+                            <span><img src="./image/profile-dp.jpg"></span>
+                            <p>Liked by <b>skselim</b> and <b>2,425 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Lana Rose</b> Lorem ispsum dolor sit quisquameius. <span class="harsh-tag">#ilfestyle</span></p>
+                            <p><b>skselim</b> &#10084;&#10084;&#10084; <span class="harsh-tag">#ilfestyle</span></p>
                         </div>
 
                         <div class="comments text-muted">
-                            View all 225 comments
+                            View all 225468 comments
                         </div>
 
                     </div>
@@ -334,18 +307,18 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,425 others</b></p>
+                            <span><img src="./image/virat-dp.jpg"></span>
+                            <span><img src="./image/csk-dp.jpg"></span>
+                            <span><img src="./image/profile-dp.jpg"></span>
+                            <p>Liked by <b>skselim</b> and <b>44,445 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Lana Rose</b> Lorem ispsum dolor sit quisquameius. <span class="harsh-tag">#ilfestyle</span></p>
+                            <p><b>skselim</b> &#10084;&#10084;&#10084; <span class="harsh-tag">#ilfestyle</span></p>
                         </div>
 
                         <div class="comments text-muted">
-                            View all 225 comments
+                            View all 281425 comments
                         </div>
 
                     </div>
@@ -382,18 +355,18 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,425 others</b></p>
+                            <span><img src="./image/virat-dp.jpg"></span>
+                            <span><img src="./image/csk-dp.jpg"></span>
+                            <span><img src="./image/profile-dp.jpg"></span>
+                            <p>Liked by <b>skselim</b> and <b>241,425 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Lana Rose</b> Lorem ispsum dolor sit quisquameius. <span class="harsh-tag">#ilfestyle</span></p>
+                            <p><b>skselim</b> &#10084;&#10084;&#10084; <span class="harsh-tag">#ilfestyle</span></p>
                         </div>
 
                         <div class="comments text-muted">
-                            View all 225 comments
+                            View all 5458225 comments
                         </div>
 
                     </div>
@@ -430,18 +403,18 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,425 others</b></p>
+                            <span><img src="./image/virat-dp.jpg"></span>
+                            <span><img src="./image/csk-dp.jpg"></span>
+                            <span><img src="./image/profile-dp.jpg"></span>
+                            <p>Liked by <b>skselim</b> and <b>52,425 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Lana Rose</b> Lorem ispsum dolor sit quisquameius. <span class="harsh-tag">#ilfestyle</span></p>
+                            <p><b>skselim</b> &#10084;&#10084;&#10084; <span class="harsh-tag">#ilfestyle</span></p>
                         </div>
 
                         <div class="comments text-muted">
-                            View all 225 comments
+                            View all 454225 comments
                         </div>
 
                     </div>
@@ -478,18 +451,18 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <span><img src="./image/img2.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,425 others</b></p>
+                            <span><img src="./image/virat-dp.jpg"></span>
+                            <span><img src="./image/csk-dp.jpg"></span>
+                            <span><img src="./image/profile-dp.jpg"></span>
+                            <p>Liked by <b>skselim</b> and <b>2,61425 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>Lana Rose</b> Lorem ispsum dolor sit quisquameius. <span class="harsh-tag">#ilfestyle</span></p>
+                            <p><b>skselim</b> &#10084;&#10084;&#10084; <span class="harsh-tag">#ilfestyle</span></p>
                         </div>
 
                         <div class="comments text-muted">
-                            View all 225 comments
+                            View all 954569 comments
                         </div>
 
                     </div>
@@ -585,12 +558,12 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./image/img2.jpg">
+                                <img src="./image/katrina.dp.jpg">
                             </div>
                             <div>
-                                <h5>Virat Kholi</h5>
+                                <h5>KatrinaKaif</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    225 mutual friends
                                 </p>
                             </div>
                         </div>
@@ -606,12 +579,12 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./image/img2.jpg">
+                                <img src="./image/rohit.dp.jpg">
                             </div>
                             <div>
-                                <h5>Virat Kholi</h5>
+                                <h5>RohitSharma</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    825 mutual friends
                                 </p>
                             </div>
                         </div>
@@ -627,12 +600,12 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./image/img2.jpg">
+                                <img src="./image/jon-dp.jpg">
                             </div>
                             <div>
-                                <h5>Virat Kholi</h5>
+                                <h5>JonCena</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    751 mutual friends
                                 </p>
                             </div>
                         </div>
@@ -648,12 +621,12 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./image/img2.jpg">
+                                <img src="./image/klrahul.dp.jpg">
                             </div>
                             <div>
-                                <h5>Virat Kholi</h5>
+                                <h5>KlRahul</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    106 mutual friends
                                 </p>
                             </div>
                         </div>
@@ -669,12 +642,12 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./image/img2.jpg">
+                                <img src="./image/srk.dp.jpg">
                             </div>
                             <div>
-                                <h5>Virat Kholi</h5>
+                                <h5>SRK</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    456 mutual friends
                                 </p>
                             </div>
                         </div>
@@ -690,12 +663,12 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./image/img2.jpg">
+                                <img src="./image/salmankhan-dp.jpeg">
                             </div>
                             <div>
-                                <h5>Virat Kholi</h5>
+                                <h5>SalmanKhan</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    626 mutual friends
                                 </p>
                             </div>
                         </div>
